// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example component test examples of some things 1`] = `
<View>
  <TextInput
    onChangeText={[Function]}
    testID="input"
    value="Ada Lovelace"
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Print Username
      </Text>
    </View>
  </View>
  <Text
    testID="printed-username"
  >
    Ada Lovelace
  </Text>
</View>
`;

exports[`Testing ErrorBoundary Components should display an ErrorMessage with FallbackComponent if wrapped component throws 1`] = `
<Text
  testID="error-boundary"
>
  I'm a bad error
</Text>
`;

exports[`Testing ErrorBoundary Components should display an ErrorMessage with no FallbackComponent if wrapped component throws 1`] = `
<View
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 48,
        "fontWeight": "300",
        "paddingBottom": 16,
      }
    }
    testID="display-error"
  >
    Oops!
  </Text>
  <Text
    style={
      {
        "color": "#000",
        "fontSize": 32,
        "fontWeight": "800",
      }
    }
  >
    Terjadi Kesalahan
  </Text>
  <Text
    style={
      {
        "paddingVertical": 16,
      }
    }
  >
    Error: I'm a bad error
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Coba Lagi
      </Text>
    </View>
  </View>
</View>
`;
